--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -37,6 +37,8 @@ adfinfo_SOURCES = adfinfo.c \
   adfinfo_file.h \
   adfinfo_hd.c \
   adfinfo_hd.h \
+  adfinfo_link.c \
+  adfinfo_link.h \
   adfinfo_volume.c \
   adfinfo_volume.h \
   pathutils.c \
