adfinfo_common: move change_dir() to the new common module.
This function might be useful for other programs as well.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -60,6 +60,8 @@ add_executable ( adfinfo
   adfinfo_link.h
   adfinfo_volume.c
   adfinfo_volume.h
+  common.c
+  common.h
   pathutils.c
   pathutils.h
 )
