tests adfls: fix tests on Windows and MacOS.
Reordering the command line arguments calling adfls.

The tests were passing on Linux, but on Windows and MacOS,
the command-line arguments seems to be interpreted as filenames.
Apparently, getopt on Windows and on MacOS does not accept options
(switches) after the positional arguments (here - after the first
argument, the adf file).

This modification fixes that issue.

--- a/tests/examples2/Makefile.am
+++ b/tests/examples2/Makefile.am
@@ -11,6 +11,7 @@ dist_check_SCRIPTS = \
 	test_adfinfo.sh \
 	test_adfinfo_hd.sh \
 	test_adf_floppy.sh \
+	test_adfls.sh \
 	test_adfsalvage.sh \
 	test_unadf.sh \
 	test_unadf_hdd.sh \
